# harmonise_pa

./: .gitignore  Log.md  README.md  explore.qmd  main.py  pyproject.toml
docs/: workbook-PA-Biological.xlsx
notebooks/: 01_anthropometry.py  02_explore.py  03_harmonise.py  04_validate.py  05_tests.py
projects/anthropometry/: log.md
src/harmonise_pa/: __init__.py  harmonise.py  utils.py  validate.py
src/harmonise_pa/config/: __init__.py  metadata.py  paths.py  variables.py
tests/: validate.py
