[project]
name = "harmonise-pa"
version = "0.1.0"
description = "Harmonise all variables for physical assessments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "banksia",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "marimo>=0.14.11",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
banksia = { path = "C:/Users/00113294/Projects/banksia", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
exclude = [".venv", "tests/*"]

[tool.marimo.runtime]
watcher_on_save = "autorun"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
